# gpipa

./: .env  .gitignore  main.py  pyproject.toml
gpipa/: main.py  settings.py
