[tool.poetry]
name = "gpipa"
version = "0.1.0"
description = ""
authors = ["profmarcelopontes <149909780+profmarcelopontes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ignr = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
